--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Homecomfort</title>
 </head>
 <body>
-    <div id="app"/>
+    <div id="app"></div>
+    <script src="app/bundle.js"></script>
 </body>
-<script src="app/bundle.js"></script>
 </html>
