--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>Homecomfort</title>
+    <style>
+        .d3-line {
+            fill: none;
+            stroke: steelblue;
+            stroke-width: 1.5px;
+        }
+    </style>
 </head>
 <body>
     <div id="app"></div>
